--- a/app/src/main/res/layout/dlg_bukti_bayar.xml
+++ b/app/src/main/res/layout/dlg_bukti_bayar.xml
@@ -93,20 +93,45 @@
 
                 </LinearLayout>
 
-                <TextView
-                    android:id="@+id/tvClose"
-                    android:layout_marginRight="10dp"
-                    style="@style/logout_button"
-                    android:layout_gravity="center_horizontal"
-                    android:gravity="center"
-                    android:layout_weight="1"
-                    android:background="@color/red_btn_bg_color"
-                    android:fontFamily="@font/roboto_bold"
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
                     android:layout_marginTop="10dp"
-                    android:text="Tutup"
-                    android:textSize="12sp"
-                    android:textColor="@color/white"
-                    tools:ignore="RtlCompat" />
+                    android:weightSum="2">
+
+                    <TextView
+                        android:id="@+id/tvClose"
+                        android:layout_marginRight="10dp"
+                        style="@style/logout_button"
+                        android:layout_gravity="center_horizontal"
+                        android:gravity="center"
+                        android:layout_weight="1"
+                        android:background="@color/red_btn_bg_color"
+                        android:fontFamily="@font/roboto_bold"
+                        android:layout_marginTop="10dp"
+                        android:text="Batal"
+                        android:textSize="12sp"
+                        android:textColor="@color/white"
+                        tools:ignore="RtlCompat" />
+
+                    <TextView
+                        android:id="@+id/tvSimpan"
+                        style="@style/logout_button"
+                        android:background="@color/main_green_color"
+                        android:layout_gravity="center_horizontal"
+                        android:gravity="center"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/roboto_bold"
+                        android:layout_marginTop="10dp"
+                        android:text="Tambah"
+                        android:textSize="12sp"
+                        android:textColor="@color/white"
+                        tools:ignore="RtlCompat" />
+
+
+
+                </LinearLayout>
 
 
 
