--- a/app/src/main/res/layout/activity_edit_profil_admin.xml
+++ b/app/src/main/res/layout/activity_edit_profil_admin.xml
@@ -131,7 +131,7 @@
             android:layout_width="match_parent"
             android:layout_height="55dp"
             android:background="@drawable/bg_editfield"
-            android:hint="Deskripsi"
+            android:hint="Bank dan No. Rekening"
             android:enabled="true"
             android:layout_marginLeft="10sp"
             android:layout_marginTop="20dp"
