--- a/app/src/main/res/layout/dlg_bukti_bayar.xml
+++ b/app/src/main/res/layout/dlg_bukti_bayar.xml
@@ -37,8 +37,19 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:text="Bukti Pembayaran"
+                    android:id="@+id/titleBuktiBayar"
                     android:textColor="@color/black"
                     android:textSize="18dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_below="@+id/titleBuktiBayar"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="No Rekening"
+                    android:id="@+id/tvNorek"
+                    android:textColor="@color/black"
+                    android:textSize="14dp" />
             </RelativeLayout>
 
 
