--- a/app/src/main/res/layout/fragment_admin_catering.xml
+++ b/app/src/main/res/layout/fragment_admin_catering.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="7dp"
-        android:text="Catering Saya"
+        android:text="Catering"
         android:textColor="@color/light_orange"
         android:textSize="20sp"
         tools:ignore="MissingPrefix" />
